src/test/ui/issues/issue-60283.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/issue-60283.rs:17:13
   |
LL | pub fn foo<T, F>(_: T, _: F)
   |        --- required by a bound in this
...
LL |     F: for<'a> FnMut(<T as Trait<'a>>::Item),
   |                ----------------------------- required by this bound in `foo`
...
LL |     foo((), drop)
   |             ^^^^
   |             |
   |             expected signature of `fn(<() as Trait<'a>>::Item) -> _`
   |             found signature of `fn(()) -> _`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0631`.
